# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Removed
- [JAIL] [APACHE] Disable and uninstall apache from jail
### Added
- [JAIL] [APACHE] Install nginx and gunicorn in the apache jail
- [JAIL] [APACHE] Ensure python is installed in the apache jail
- [SYSTEM] Create a new /var/sockets/gui folder and mount it RW in the apache jail
- [SUDO] Allow vlt-os to manage gunicorn/nginx services
### Changed
- [UPDATE_SYSTEM] stop/start/reload nginx/gunicorn during system updates
- [LOGROTATE] reload nginx and gunicorn in the apache jail after rotating gui logs


## [2.0.4] - 2022-11-21
### Added
- [CLOUD_INIT] Default logging configuration
- [SYSTEM] [CSHRC] Additional bindings for terminal manipulation


## [2.0.3] - 2022-11-10
### Changed
- [CLOUD_INIT] Support for 'NoCloud' datasource in replacement of (unused) ConfigDrive
- [CLOUD_INIT] add support for more partition names for growpart module
- [CLUSTER_SCRIPTS] Allow calling cluster_* scripts with parameters
### Added
- [UPDATE_SYSTEM.SH] jail update support for new appliances (common jail base)
- [PROXY.SH] Set proxy settings in pkg.conf to use proxy transparently
### Fixed
- [PFCTL_INIT] Reload pf rules after rewriting them


## [2.0.2] - 2022-10-27
### Fixed
- [SCRIPTS] resolve formatting and typing mistakes in network-ips.sh


## [2.0.1] - 2022-10-19
### Removed
- [DENYHOSTS] Completely remove denyhosts for the time being
### Changed
- [MKJAIL] Use hbsd-update instead of manual download/check/untar of update archives when creating jails
- [DEPENDENCY] Changed installations from package name to origin which considers the default python version of the HBSD image
- [DEPENDENCY] Changed uses of python 3.8 binary to python3 to accommodate systems' default version of python


## [2.0.0] - 2022-09-07